--- a/Registration_Form/css/style.css
+++ b/Registration_Form/css/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.google.com/specimen/Poppins');
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url('https://fonts.google.com/specimen/Poppins');
+
 *{
     box-sizing: border-box;
     padding: 0;
@@ -76,18 +80,19 @@ body{
     font-family: 'Poppins', sans-serif;
     color:hsl(0, 0%, 95%);
     font-size: 12px;
+    font-family:'Poppins';
 }
 
 .item_two h1{
     margin-top: 6rem;
     color: hsl(0, 0%, 95%);
-    font-family: 'Poppins', sans-serif;
+    font-family:'Poppins';
 }
 
 .item_two p{
     margin-top: 1rem;
     color: hsl(0, 0%, 95%);
-    font-family: 'Poppins', sans-serif;
+    font-family:'Poppins';
 }
 
 input{
@@ -102,12 +107,35 @@ input{
     font-weight: 300;
 }
 
-button{
+.button {
     width: 100%;
-    background-color: hsl(154, 59%, 51%)
+    background-color: hsl(154, 59%, 51%);
     text-align: center;
     padding: 12px 0;
     margin-bottom: 1rem;
     border-radius: 5px;
     cursor: pointer;
+    font-family:'Poppins';
+}
+
+.item_three p{
+    font-size: 12px;
+    font-family:'Poppins';
+}
+
+.button:hover{
+    background-color:transparent;
+}
+
+@media (max-width:375px){
+    .container{
+        display: flex;
+        flex-direction: column;
+        padding: 5rem 0;
+    }
+
+    .items{
+        min-width: 20rem;
+        
+    }
 }
