--- a/Responsive_Landing_Page/css/style.css
+++ b/Responsive_Landing_Page/css/style.css
@@ -35,6 +35,9 @@
     list-style-type: none;
   }
 
+  a{
+    text-decoration: none;
+  }
   nav {
     background: hsl(193, 100%, 96%);
     display: flex;
@@ -173,10 +176,57 @@
     text-align: center;
   }
 
+  .footer {
+    background-color: hsl(192, 100%, 9%);
+    padding: 70px 0;
+  }
 
-  
+  #footer_logo_svg{
+    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(1deg) brightness(100%) contrast(100%);
+    width: 150px;
+  }
+
+  .cont{
+    max-width:1170px;
+    margin:auto;
+  }
+
+  .row{
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .footer-col{
+    width: 25%;
+    padding: 0 15px;
+  }
+
+  .footer-col p{
+    color: white;
+  }
+
+  .footer-col a{
+    color: white;
+  }
+
+.footer-col ul li:not(:last-child){
+margin-bottom:10px;
+}
+
+.social li{
+  display: inline-block;
+  justify-content: space-around;
+  padding: 10px;
+}
+
+.copy_right{
+  color: white;
+  float: right;
+  margin-top: 1.5rem;
+}
+
+.icon{
+  font-size: 1.2rem;
+}
 
 
-
-
-  
